Fixed double scroll bar in Firefox.

--- a/_assets/stylesheets/_style.sass
+++ b/_assets/stylesheets/_style.sass
@@ -1,11 +1,11 @@
+html
+  overflow-y: scroll
+
 // Foundation 5.2.1 sets
 // height: 100%
 // which breaks the layout
-body, html
-  height: auto
-
 body
-  overflow-y: scroll
+  height: auto
 
 a
   text-decoration: none
